Fix responsiveness of homepage news on smaller screens and download page grammar

--- a/src/components/index/styles/news.css
+++ b/src/components/index/styles/news.css
@@ -43,3 +43,14 @@
     padding: 5px;  
     box-sizing: border-box;
 }
+
+.font-inter {
+    font-family: Inter;
+}
+
+@media (min-width: 992px) {
+  .custom-lg-padding {
+    padding-left: 8rem !important;
+    padding-right: 8rem !important;
+  }
+}
